packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_dollar_mid_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      8,
      15
    ],
    "items": 4
  }
]
