packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_paren_multi_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      13,
      20
    ],
    "items": 5
  }
]
