packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_paren_nested_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      17
    ],
    "items": 6
  }
]
