packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_paren_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      15
    ],
    "items": 4
  }
]
