packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_quote_in_string_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      10
    ],
    "items": 2
  }
]
