packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_quote_nested_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      14
    ],
    "items": 4
  }
]
