packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unknown_after_unclosed_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      13
    ],
    "items": 2
  }
]
