packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unknown_call_args_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      28
    ],
    "items": 2
  }
]
